# QnA-RAG

./: HYDRA_CONFIG.md  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/api/: dependencies.py
app/api/routes/: documents.py  health.py  query.py
app/conf/: config.yaml
app/core/: document_processor.py  embeddings.py  rag_chain.py  rag_evalutator.py  vector_store.py
app/dto/: config.py  document_schema.py  error_schema.py  evaluation_scores.py  health_schema.py  query_schema.py
app/examples/: config_examples.py
app/utils/: config_utils.py  logger.py
